force-app/main/default/objects/Invoice_Line__c/fields/Billable_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Billable_Minutes__c</fullName>
    <label>Billable Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>