force-app/main/default/objects/Invoice_Line__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Incurred</label>
    <type>Date</type>
</CustomField>