force-app/main/default/objects/Invoice_Line__c/fields/Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incurred By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>