force-app/main/default/objects/Invoice_Line__c/fields/Incurred_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By_Text__c</fullName>
    <label>Incurred By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>