force-app/main/default/objects/Invoice_Line__c/fields/Main_Activity__c.field-meta.xml
<CustomField>
    <fullName>Main_Activity__c</fullName>
    <label>Main Activity</label>
    <length>250</length>
    <type>Text</type>
</CustomField>